--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
 
   <footer>
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
     <ul class="sci">
       <li><a href="#">
           <ion-icon name="logo-facebook"></ion-icon>
@@ -26,6 +32,14 @@
           <ion-icon name="logo-youtube"></ion-icon>
         </a></li>
     </ul>
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Team</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <p>©2021 wsasouza | All Rights Reserved</p>
   </footer>
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
