--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </ul>
     <ul class="menu">
       <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Team</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Serviços</a></li>
+      <li><a href="#">Portfólio</a></li>
+      <li><a href="#">Contato</a></li>
     </ul>
     <p>©2021 wsasouza | All Rights Reserved</p>
   </footer>
